--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     implementation 'androidx.compose.material3:material3'
     implementation 'androidx.compose.material:material'
     implementation 'io.coil-kt:coil-compose:2.0.0-rc01'
+    implementation 'com.google.accompanist:accompanist-pager:0.19.0'
+    implementation 'com.google.accompanist:accompanist-pager-indicators:0.19.0'
+
 
     testImplementation 'junit:junit:4.13.2'
 
